--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Becky Rasmussen</title>
     <link rel="stylesheet" type="text/css" href="/Users/Becky/CoderGirl/portfolio_project/main.css">
     <meta content="width=device-width,maximum-scale=1.0,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes" name="viewport">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|PT+Serif" rel="stylesheet">
   </head>
 
   <body>
@@ -21,37 +21,42 @@
       <hr>
     </header>
 
-    <h1>About</h1>
+    <h1><a class="no-style" name="#about">About</a></h1>
     <div class="about">
-        <img src="images/Becky_Rasmussen.jpg" alt="Headshot of Becky Rasmussen" class="thumbnail" width="175px">
-        <p>For the past 15 years, I've worked in nonprofit communications and management, and currently serve as Director of Marketing & Communications for FOCUS St. Louis.
-        <p>A big part of my career has been managing website content, and along the way, I picked up bits and pieces of website design and development.
+        <img src="images/Becky_Rasmussen.jpg" alt="Headshot of Becky Rasmussen" class="thumbnail" width="185px">
+        <p>For the past 15 years, I've worked in nonprofit communications and management, currently serving as Director of Marketing and Communications for <a href="http://www.focus-stl.org" target="_blank">FOCUS St. Louis</a>.
+        <p>Managing website content has always been a part of my jobs, and along the way, I've picked up elements of website design and coding. I joined the <a href="https://www.launchcode.org/coder_girl" target="_blank">CoderGirl</a> website design and development cohort in January 2018 in order to gain a deeper understanding of the fundamentals and principles of website development.
+        <p>I look forward to using the knowledge and skills I'm gaining in my everyday work, as well as expanding my future career opportunities.
     </div>
 
-    <h1>Experience</h1>
+    <h1><a class="no-style" name="experience">Experience</a></h1>
     <div class="experience">
-        <h3>Experience 1</h3>
-        <P>About this experience</p>
-        <h3>Experience 2</h3>
-        <p>About this experience</p>
+        <h4>Director of Marketing & Communications, <a href="http://www.focus-stl.org" target="_blank">FOCUS St. Louis</a> - <em>2014-present</em></h3>
+        <p>Oversee strategy and development of all organizational content, including email communications, website, social media, marketing collateral, annual report and press materials.</p>
+        <h4>Managing Editor, <a href="http://www.mac-stl.org" target="_blank">Missouri Athletic Club</a> - <em>2013-2014</em></h3>
+        <p>Managed production of monthly print magazine, weekly email newsletters and organization website.</p>
+        <h4>Deputy Director, <a href="http://www.amrms.com" target="_blank">AMR Management Services</a> - <em>2005-2013</em></h3>
+        <p>Managed print and digital content for a number of trade association clients, along with planning and implemnenting client conferences, trade shows and events.</p>
     </div>
 
-    <h1>Skills</h1>
-    <div class="skills">
-    </div>
+    <h1><a class="no-style" name="skills">Skills</a></h1>
+    <div class="skills">HTML</div>
+    <div class="skills">CSS</div>
 
-    <h1>Projects</h1>
-      <div class="project1">
+
+    <h1><a class="no-style" name="projects">Projects</a></h1>
+      <div class="project">
         <p>Project #1</p>
         <p>Project Description</p>
         <p><a href="index.html" target="_blank">Project Link</a></p>
       </div>
-      <div class="project2">
+      <div class="project">
         <p>Project #2</p>
         <p>Project Description</p>
         <p><a href="index.html" target="_blank">Project Link</a></p>
       </div>
     </div>
+    <p></p>
 
   </body>
 </html>
